--- a/examples/contribs/blobWar/Viewer/blobWarWindow.Qt4.ui
+++ b/examples/contribs/blobWar/Viewer/blobWarWindow.Qt4.ui
@@ -1,10 +1,8 @@
-<ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>BlobWarWindow</class>
- <widget class="QMainWindow" name="BlobWarWindow" >
-  <property name="geometry" >
+ <widget class="QMainWindow" name="BlobWarWindow">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -12,276 +10,255 @@
     <height>482</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>BlobWar</string>
   </property>
-  <widget class="QWidget" name="widget" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>29</y>
-     <width>600</width>
-     <height>453</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" >
-    <property name="margin" >
+  <widget class="QWidget" name="widget">
+   <layout class="QGridLayout">
+    <property name="margin">
      <number>3</number>
     </property>
-    <property name="spacing" >
-     <number>6</number>
-    </property>
-    <item row="0" column="0" >
-     <widget class="BlobWarViewer" name="blobWarViewer" />
+    <item row="0" column="0">
+     <widget class="BlobWarViewer" name="blobWarViewer" native="true"/>
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar" >
-   <property name="geometry" >
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>28</height>
+     <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="fileMenu" >
-    <property name="geometry" >
+   <widget class="QMenu" name="fileMenu">
+    <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>700</width>
-      <height>420</height>
+      <width>131</width>
+      <height>134</height>
      </rect>
     </property>
-    <property name="title" >
+    <property name="title">
      <string>&amp;File</string>
     </property>
-    <addaction name="fileOpenAction" />
-    <addaction name="fileSaveAction" />
-    <addaction name="fileSaveAsAction" />
-    <addaction name="separator" />
-    <addaction name="fileExitAction" />
+    <addaction name="fileOpenAction"/>
+    <addaction name="fileSaveAction"/>
+    <addaction name="fileSaveAsAction"/>
+    <addaction name="separator"/>
+    <addaction name="fileExitAction"/>
    </widget>
-   <widget class="QMenu" name="PopupMenu" >
-    <property name="geometry" >
+   <widget class="QMenu" name="PopupMenu">
+    <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>700</width>
-      <height>420</height>
+      <width>178</width>
+      <height>84</height>
      </rect>
     </property>
-    <property name="title" >
+    <property name="title">
      <string>&amp;Display</string>
     </property>
-    <addaction name="togglePossibleMoveAction" />
-    <addaction name="toggleAnimationAction" />
+    <addaction name="togglePossibleMoveAction"/>
+    <addaction name="toggleAnimationAction"/>
    </widget>
-   <widget class="QMenu" name="helpMenu" >
-    <property name="geometry" >
+   <widget class="QMenu" name="helpMenu">
+    <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>700</width>
-      <height>420</height>
+      <width>147</width>
+      <height>84</height>
      </rect>
     </property>
-    <property name="title" >
+    <property name="title">
      <string>&amp;Help</string>
     </property>
-    <addaction name="helpRulesAction" />
-    <addaction name="helpAboutAction" />
+    <addaction name="helpRulesAction"/>
+    <addaction name="helpAboutAction"/>
    </widget>
-   <widget class="QMenu" name="editMenu" >
-    <property name="geometry" >
+   <widget class="QMenu" name="editMenu">
+    <property name="geometry">
      <rect>
       <x>397</x>
       <y>279</y>
-      <width>173</width>
-      <height>169</height>
+      <width>181</width>
+      <height>215</height>
      </rect>
     </property>
-    <property name="title" >
+    <property name="title">
      <string>&amp;Game</string>
     </property>
-    <addaction name="gameNewGameAction" />
-    <addaction name="separator" />
-    <addaction name="gameUndoAction" />
-    <addaction name="gameRedoAction" />
-    <addaction name="separator" />
-    <addaction name="gameBlueIsHumanAction" />
-    <addaction name="gameConfigureBluePlayerAction" />
-    <addaction name="separator" />
-    <addaction name="gameRedIsHumanAction" />
-    <addaction name="gameConfigureRedPlayerAction" />
+    <addaction name="gameNewGameAction"/>
+    <addaction name="separator"/>
+    <addaction name="gameUndoAction"/>
+    <addaction name="gameRedoAction"/>
+    <addaction name="separator"/>
+    <addaction name="gameBlueIsHumanAction"/>
+    <addaction name="gameConfigureBluePlayerAction"/>
+    <addaction name="separator"/>
+    <addaction name="gameRedIsHumanAction"/>
+    <addaction name="gameConfigureRedPlayerAction"/>
    </widget>
-   <addaction name="fileMenu" />
-   <addaction name="editMenu" />
-   <addaction name="PopupMenu" />
-   <addaction name="helpMenu" />
+   <addaction name="fileMenu"/>
+   <addaction name="editMenu"/>
+   <addaction name="PopupMenu"/>
+   <addaction name="helpMenu"/>
   </widget>
-  <action name="fileOpenAction" >
-   <property name="iconText" >
+  <action name="fileOpenAction">
+   <property name="iconText">
     <string>Load game</string>
    </property>
-   <property name="toolTip" >
+   <property name="toolTip">
     <string>Load a saved game</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="fileSaveAction" >
-   <property name="iconText" >
+  <action name="fileSaveAction">
+   <property name="iconText">
     <string>Save</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+S</string>
    </property>
   </action>
-  <action name="fileSaveAsAction" >
-   <property name="iconText" >
+  <action name="fileSaveAsAction">
+   <property name="iconText">
     <string>Save As</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string/>
    </property>
   </action>
-  <action name="fileExitAction" >
-   <property name="iconText" >
+  <action name="fileExitAction">
+   <property name="iconText">
     <string>Exit</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Esc</string>
    </property>
   </action>
-  <action name="gameUndoAction" >
-   <property name="iconText" >
+  <action name="gameUndoAction">
+   <property name="iconText">
     <string>Undo</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+Z</string>
    </property>
   </action>
-  <action name="gameRedoAction" >
-   <property name="iconText" >
+  <action name="gameRedoAction">
+   <property name="iconText">
     <string>Redo</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+Y</string>
    </property>
   </action>
-  <action name="helpRulesAction" >
-   <property name="iconText" >
+  <action name="helpRulesAction">
+   <property name="iconText">
     <string>Rules of BlobWar</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string/>
    </property>
   </action>
-  <action name="helpAboutAction" >
-   <property name="iconText" >
+  <action name="helpAboutAction">
+   <property name="iconText">
     <string>About</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string/>
    </property>
   </action>
-  <action name="gameNewGameAction" >
-   <property name="iconText" >
+  <action name="gameNewGameAction">
+   <property name="iconText">
     <string>New game</string>
    </property>
-   <property name="shortcut" >
+   <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
   </action>
-  <action name="toggleAnimationAction" >
-   <property name="checkable" >
+  <action name="toggleAnimationAction">
+   <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="checked" >
+   <property name="checked">
     <bool>true</bool>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>Animate moves</string>
    </property>
   </action>
-  <action name="togglePossibleMoveAction" >
-   <property name="checkable" >
+  <action name="togglePossibleMoveAction">
+   <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="checked" >
+   <property name="checked">
     <bool>true</bool>
    </property>
-   <property name="text" >
+   <property name="text">
     <string>Show possible moves</string>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>Show possible moves</string>
    </property>
   </action>
-  <action name="gameRedIsHumanAction" >
-   <property name="checkable" >
+  <action name="gameRedIsHumanAction">
+   <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="checked" >
+   <property name="checked">
     <bool>false</bool>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>Red player is human</string>
    </property>
   </action>
-  <action name="gameBlueIsHumanAction" >
-   <property name="checkable" >
+  <action name="gameBlueIsHumanAction">
+   <property name="checkable">
     <bool>true</bool>
    </property>
-   <property name="checked" >
+   <property name="checked">
     <bool>true</bool>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>Blue player is human</string>
    </property>
   </action>
-  <action name="gameConfigureRedPlayerAction" >
-   <property name="enabled" >
+  <action name="gameConfigureRedPlayerAction">
+   <property name="enabled">
     <bool>true</bool>
    </property>
-   <property name="text" >
+   <property name="text">
     <string>Configure red player</string>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>Configure red player</string>
    </property>
   </action>
-  <action name="gameConfigureBluePlayerAction" >
-   <property name="enabled" >
+  <action name="gameConfigureBluePlayerAction">
+   <property name="enabled">
     <bool>false</bool>
    </property>
-   <property name="text" >
+   <property name="text">
     <string>Configure blue player</string>
    </property>
-   <property name="iconText" >
+   <property name="iconText">
     <string>Configure blue player</string>
    </property>
   </action>
  </widget>
- <layoutdefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
-  <customwidget>
-   <class>QMainWindow</class>
-   <extends></extends>
-   <header>qmainwindow.h</header>
-   <container>1</container>
-   <pixmap></pixmap>
-  </customwidget>
   <customwidget>
    <class>BlobWarViewer</class>
    <extends></extends>
    <header>blobWarViewer.h</header>
-   <container>0</container>
-   <pixmap></pixmap>
   </customwidget>
  </customwidgets>
  <resources/>
