--- a/examples/contribs/blobWar/Viewer/computerPlayerInterface.Qt4.ui
+++ b/examples/contribs/blobWar/Viewer/computerPlayerInterface.Qt4.ui
@@ -1,48 +1,37 @@
-<ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ComputerPlayerInterface</class>
- <widget class="QDialog" name="ComputerPlayerInterface" >
-  <property name="geometry" >
+ <widget class="QDialog" name="ComputerPlayerInterface">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>303</width>
-    <height>124</height>
+    <height>133</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Player configuration</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
+  <layout class="QVBoxLayout">
+   <property name="margin">
     <number>10</number>
    </property>
-   <property name="spacing" >
-    <number>6</number>
-   </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
+    <layout class="QHBoxLayout">
      <item>
-      <widget class="QLabel" name="programText" >
-       <property name="text" >
+      <widget class="QLabel" name="programText">
+       <property name="text">
         <string>Program</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="programNameLineEdit" />
+      <widget class="QLineEdit" name="programNameLineEdit"/>
      </item>
      <item>
-      <widget class="QPushButton" name="browseButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="browseButton">
+       <property name="text">
         <string>Browse</string>
        </property>
       </widget>
@@ -50,38 +39,32 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
+    <layout class="QHBoxLayout">
      <item>
-      <widget class="QLabel" name="maxTimeText" >
-       <property name="text" >
+      <widget class="QLabel" name="maxTimeText">
+       <property name="text">
         <string>Allowed time</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="allowedTimeSpinBox" >
-       <property name="toolTip" >
+      <widget class="QSpinBox" name="allowedTimeSpinBox">
+       <property name="toolTip">
         <string>Maximum computer program relexion time</string>
        </property>
-       <property name="specialValueText" >
+       <property name="specialValueText">
         <string>1 second</string>
        </property>
-       <property name="suffix" >
+       <property name="suffix">
         <string> seconds</string>
        </property>
-       <property name="maximum" >
-        <number>999</number>
-       </property>
-       <property name="minimum" >
+       <property name="minimum">
         <number>1</number>
        </property>
-       <property name="value" >
+       <property name="maximum">
+        <number>999</number>
+       </property>
+       <property name="value">
         <number>1</number>
        </property>
       </widget>
@@ -89,22 +72,16 @@
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
+    <layout class="QHBoxLayout">
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>10</width>
          <height>20</height>
@@ -113,21 +90,21 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>Ok</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>10</width>
          <height>20</height>
@@ -136,21 +113,21 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
         <string>Cancel</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>10</width>
          <height>20</height>
@@ -162,7 +139,7 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <resources/>
  <connections>
@@ -172,11 +149,11 @@
    <receiver>ComputerPlayerInterface</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>86</x>
      <y>96</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>25</x>
      <y>97</y>
     </hint>
@@ -188,11 +165,11 @@
    <receiver>ComputerPlayerInterface</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>221</x>
      <y>95</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>273</x>
      <y>95</y>
     </hint>
