Better commercial web pages.
git-svn-id: https://libqglviewer.googlecode.com/svn/trunk@174 da6d9524-6789-53b3-a77f-85cae9118ae5

--- a/doc/qglviewer.css
+++ b/doc/qglviewer.css
@@ -12,9 +12,9 @@ h1 img { vertical-align:middle; }
 h2 {
   color: #003;
   font-size: larger;
-  background-color: #ddddff;
-  padding : 5px 0px 2px 20px;
-  margin-top : 50px;
+  background-color: #eeeeff;
+  padding : 6px 0px 2px 20px;
+  margin-top : 30px;
   border:1px solid #aaaacc;
 }
 
