--- a/examples/interface/viewerInterface.ui
+++ b/examples/interface/viewerInterface.ui
@@ -14,10 +14,16 @@
    <string>Interface</string>
   </property>
   <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
+   <property name="leftMargin">
+    <number>8</number>
    </property>
-   <property name="margin">
+   <property name="topMargin">
+    <number>8</number>
+   </property>
+   <property name="rightMargin">
+    <number>8</number>
+   </property>
+   <property name="bottomMargin">
     <number>8</number>
    </property>
    <item>
@@ -32,12 +38,6 @@
    </item>
    <item>
     <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
-     </property>
      <item>
       <widget class="QCheckBox" name="FPSCheckBox">
        <property name="text">
